# workflow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  test.yml
helm/declarative-recs/templates/: configmap.yaml  workflow.yaml
helm/workflow/: Chart.yaml  values.yaml
helm/workflow/templates/: configmap.yaml  template.yaml  workflow.yaml
mar/nn/workflow/: __init__.py
mar/nn/workflow/transform/: __main__.py  _transform.py
mar/workflow/transform/: __main__.py
src/mar/nn/workflow/: __init__.py  schema.py  utils.py
src/mar/nn/workflow/transform/: __init__.py  __main__.py  _transform.py  features.py
src/mar/workflow/: __init__.py
src/mar/workflow/transform/: __main__.py  _transform.py  features.py
terraform/: main.tf
tests/: conftest.py  test_schema.py  test_transform.py
tests/fixtures/: data.csv  schema.json  schema.yaml
