[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mar-workflow"
readme = "README"
requires-python = ">=3.11"
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
dev = ["flake8", "black", "isort", "pytest", "pre-commit"]

[tool.setuptools.dynamic]
version = { attr = "mar.nn.workflow.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.coverage.report]
show_missing = true
exclude_lines = ["if __name__ == .__main__.:", "_cmd"]
omit = ["*/__init__.py"]

[tool.pytest.ini_options]
minversion = 6.0
addopts    = """
    -v
    --cov=src/**
    --cov-report=term-missing
    --cov-fail-under=50
"""
